# Experiments

./: README.md
Doggies/: .gitignore  CLAUDE.md  README.md  project_workflow_superpowers.md  project_workflow_v1.md  pyproject.toml
Doggies/.claude/: gsd-file-manifest.json  settings.json
Doggies/.claude/agents/: code-refactor.md  gsd-ai-researcher.md  gsd-code-fixer.md  gsd-debug-session-manager.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md  planner.md
Doggies/.claude/commands/: code-refactor.md  e2e-verification.md  planner.md
Doggies/.github/workflows/: pr-checks.yml
Doggies/.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
Doggies/claude_setup_ai_mock_interviewer_app/: CLAUDE.md  README.md  settings.local.json
Doggies/claude_setup_ai_mock_interviewer_app/agents/: git-commit.md  verification-agent.md
Doggies/claude_setup_ai_mock_interviewer_app/rules/: api-routes.md  auth.md  components.md  gemini.md  pages.md  supabase.md
Doggies/scripts/: seed_photos.py  setup_db.sql
Doggies/src/agent/: system_prompt.py  tools.py
Doggies/src/bot/: bot.py
Doggies/src/db/: bookings.py  client.py  memory.py  users.py
Doggies/tests/: test_agent_loop.py  test_bot_handlers.py
Doggies/v0/: .env.example  CLAUDE.md
Doggies/v0/docs/: PRD.md
(+214 files in other folders)
